<resources>
    <string name="app_name">Hamburguers For Us</string>
    <string name="add_hamburguer_button">Add Hamburguer</string>
    <string name="add_ham_name">Restaurant name..</string>
    <string name="add_ham_dir">Address..</string>
    <string name="add_ham_num_telf">Telephone..</string>
    <string name="add_ham_email">E-mail..</string>
    <string name="add_ham_ok">Add restaurant</string>
    <string name="err_need_perms">Need external memory and camera permission to continue.</string>
    <string name="err_cam_tak">Something went wrong taking the picture.</string>
    <string name="err_burg_null">You can\'t add an empty Restaurant.</string>
    <string name="err_burg_name_null">The restaurant must have a name, an address and a valid telephone.</string>
    <string name="btn_accept">Accept</string>
    <string name="img_item_desc">Restaurant\'s image</string>
    <string name="title_activity_show_hamburguers">ShowHamburguersActivity</string>
    <string name="action_settings">Settings</string>
    <string name="conf_del_tit">Delete hamburguer..</string>
    <string name="conf_del_mss">Are you sure you want to delete:</string>
    <string name="msg_share_sbj">Subject:</string>
    <string name="msg_share_txt1">Come to </string>
    <string name="msg_share_txt2">and enjoy our fantastic menú at </string>
    <string name="msg_share_txt3"> or call us on </string>
    <string name="msg_share_title">Share this hamburguer!</string>


</resources>
